# Propositional-Logic-Trainer

./: .gitattributes  .gitignore  LICENSE  README  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.sh
apps/feedback/: admin.py  models.py  serializers.py
apps/feedback/migrations/: 0001_initial.py  0002_delete_feedbackrule.py
apps/generate_tasks/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  views.py
apps/generate_tasks/migrations/: 0001_initial.py  0002_task_premises_sympy.py  0003_make_premises_sympy_required.py  0004_alter_task_task_type.py  0005_alter_task_task_type.py  0006_alter_task_task_type.py  0007_alter_task_task_type.py
apps/solve_tasks/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/solve_tasks/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/tests/: bucket_elimination_test.py  workflow_test.py
core/task_generator/: Task.py  generate_tasks.py
core/tests/: bucket_elimination_test.py  workflow_test.py
docs/: NPM_VS_DJANGO_ERKLAERUNG.md
docs/architecture/: SOFTWAREARCHITEKTUR.md  bucket_elimination.drawio
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
frontend/src/: App.tsx
logic_trainer/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: README.md  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh  start-production.ps1  start-production.sh
tests/: bucket_elimination_test.py  workflow_test.py
(+47 files in other folders)
